[package]
name = "cpal"
version = "0.14.1"
authors = ["The CPAL contributors", "Pierre Krieger <pierre.krieger1708@gmail.com>"]
description = "Low-level cross-platform audio I/O library in pure Rust."
repository = "https://github.com/rustaudio/cpal"
documentation = "https://docs.rs/cpal"
license = "Apache-2.0"
keywords = ["audio", "sound"]
edition = "2021"

[dependencies]
thiserror = "1.0.2"

[dev-dependencies]
anyhow = "1.0.12"
hound = "3.4"
ringbuf = "0.2"
clap = { version = "3.1", default-features = false, features = ["std"] }


[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd"))'.dependencies]
alsa = "0.6"
nix = "0.25"
libc = "0.2.65"
parking_lot = "0.12"
jack = { version = "0.9", optional = true }

[[example]]
name = "android"
path = "examples/android.rs"
crate-type = ["cdylib"]

[[example]]
name = "beep"

[[example]]
name = "enumerate"

[[example]]
name = "feedback"

[[example]]
name = "record_wav"

[[example]]
name = "synth_tones"
